2005-01-29  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am (NOINSTALL_JNI_DERIVED_HDRS): Only create
	classpath AWT, alsa, esd or libxmlj headers if the native libraries
	for them should be built.

	Reported by:  Nektarios K. Papadopoulos  <npapadop@inaccessnetworks.com>

2005-01-28  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Added COND_NATIVE_SOUND conditional.

	* libraries/clib/Makefile.am (SUBDIRS): Only descend into sound subdir
	if native sound support should be built.

	Reported by:  Nektarios K. Papadopoulos  <npapadop@inaccessnetworks.com>
	
2005-01-28  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/Makefile.am (SUBDIRS): Only descend into awt subdir
	if native AWT should be built.

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

2005-01-27  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/net/protocol/ftp/FTPURLConnection.java:
	Use gnu.java.security.action.GetPropertyAction.

	* libraries/javalib/gnu/java/net/GetSystemPropertyAction.java:
	Removed.

2005-01-27  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/inet/util/GetSystemPropertyAction.java:
	Removed unused class.

2005-01-27  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/gnu/java/rmi/dgc/DGCImpl_Skel.java,
          libraries/javalib/gnu/java/rmi/dgc/DGCImpl_Stub.java,
          libraries/javalib/gnu/java/rmi/registry/RegistryImpl_Skel.java,
          libraries/javalib/gnu/java/rmi/registry/RegistryImpl_Stub.java:
        Reverted the files back to Classpath's version since they are generated.
	It would be cool to fix rmic to not generate such files, though, to
	avoid the jikes warnings in generated code.

2005-01-27  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.
	
	2005-01-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/swing/SwingUtilities.java:
	(getAccessibleAt(java.awt.Component, java.awt.Point)):
	Implemented and documented.